<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="10"
            android:textColor="@color/green" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0" >

            <TextView
                android:id="@+id/wordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right|center_vertical"
                android:padding="4dp"
                android:text="@string/word" />

            <EditText
                android:id="@+id/wordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/wordGuess"
                android:longClickable="false" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0" >

            <TextView
                android:id="@+id/guessTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:padding="4dp"
                android:text="@string/guess" />

            <EditText
                android:id="@+id/guessEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/guessHint" >

                <requestFocus />
            </EditText>

        </LinearLayout>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_span="2"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/goButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/go"
                android:width="@dimen/buttonWidth" />

            <Button
                android:id="@+id/validateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:text="@string/test"
                android:width="@dimen/buttonWidth" />

        </LinearLayout>

        </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:gravity="center"
            android:padding="0dp"
            android:paddingBottom="4dp"
            android:text="@string/scores"
            android:textSize="@dimen/scoreLabel" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:layout_weight="1"
        android:background="@android:color/darker_gray" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/firstRowTopMargin"
                    android:layout_weight="0"
                    android:gravity="center" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" >

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/leftMargin"
                            android:layout_marginRight="@dimen/rightMargin"
                            android:text="@string/level"
                            android:textSize="@dimen/score"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score"
                            android:textSize="@dimen/score"
                            android:textStyle="bold" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/topMargin"
                    android:gravity="center" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginLeft="@dimen/leftMargin"
                            android:layout_marginRight="@dimen/rightMargin"
                            android:contentDescription="@string/scores"
                            android:text="@string/four"
                            android:textSize="@dimen/score" />

                        <TextView
                            android:id="@+id/fourScoreTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/scores"
                            android:text="@string/initialScore"
                            android:textSize="@dimen/score" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/leftMargin"
                            android:layout_marginRight="85dp"
                            android:layout_marginTop="@dimen/topMargin"
                            android:contentDescription="@string/scores"
                            android:text="@string/five"
                            android:textSize="@dimen/score" />

                        <TextView
                            android:id="@+id/fiveScoreTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/topMargin"
                            android:contentDescription="@string/scores"
                            android:text="@string/initialScore"
                            android:textSize="@dimen/score" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/leftMargin"
                            android:layout_marginRight="93dp"
                            android:layout_marginTop="@dimen/topMargin"
                            android:contentDescription="@string/scores"
                            android:text="@string/six"
                            android:textSize="@dimen/score" />

                        <TextView
                            android:id="@+id/sixScoreTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/topMargin"
                            android:text="@string/initialScore"
                            android:textSize="@dimen/score" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp" >

                    <Button
                        android:id="@+id/clearButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/clear" />
                </TableRow>
            </TableLayout>

        </ScrollView>

    </TableRow>

</TableLayout>